--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1>hello webpack</h1>
-  <script src="../src/main.js"></script>
+  <script src="../dist/main.js"></script>
 </body>
 
 </html>
