feat: add new div to index.html for improved layout
- Add a new div with class "box2" in public/index.html

Signed-off-by: stevecyj <ycsteven.tsao@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <body>
   <h1>hello webpack</h1>
   <div class="box"></div>
+  <div class="box2"></div>
   <script src="../dist/main.js"></script>
 </body>
 
