--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <h1>hello webpack</h1>
   <div class="box"></div>
   <div class="box2"></div>
+  <div class="box3"></div>
+  <div class="box4"></div>
   <script src="../dist/main.js"></script>
 </body>
 
