--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <div class="box2"></div>
   <div class="box3"></div>
   <div class="box4"></div>
+  <div class="box5"></div>
   <script src="../dist/main.js"></script>
 </body>
 
