--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
 
 <body>
   <h1>hello webpack</h1>
-  <div class="box"></div>
+  <div>
+    <div class="box"></div>
+    <div class="box6"></div>
+  </div>
   <div class="box2"></div>
   <div class="box3"></div>
   <div class="box4"></div>
