--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,26 @@
 
 <body>
   <h1>hello webpack</h1>
-  <div>
+  <div class='df'>
     <div class="box"></div>
     <div class="box6"></div>
   </div>
-  <div class="box2"></div>
-  <div class="box3"></div>
-  <div class="box4"></div>
-  <div class="box5"></div>
+  <div class="df">
+    <div class="box2"></div>
+    <div class="box7"></div>
+  </div>
+  <div class="df">
+    <div class="box3"></div>
+    <div class="box8"></div>
+  </div>
+  <div class="df">
+    <div class="box4"></div>
+    <div class="box9"></div>
+  </div>
+  <div class="df">
+    <div class="box5"></div>
+    <div class="box10"></div>
+  </div>
   <script src="../dist/main.js"></script>
 </body>
 
