--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="ie=edge"
+    />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible"
-        content="ie=edge">
-  <title>Document</title>
-</head>
-
-<body>
-  <h1>hello webpack</h1>
-  <div class='df'>
-    <div class="box"></div>
-    <div class="box6"></div>
-  </div>
-  <div class="df">
-    <div class="box2"></div>
-    <div class="box7"></div>
-  </div>
-  <div class="df">
-    <div class="box3"></div>
-    <div class="box8"></div>
-  </div>
-  <div class="df">
-    <div class="box4"></div>
-    <div class="box9"></div>
-  </div>
-  <div class="df">
-    <div class="box5"></div>
-    <div class="box10"></div>
-  </div>
-  <script src="../dist/main.js"></script>
-</body>
-
+  <body>
+    <h1>hello webpack</h1>
+    <div class="df">
+      <div class="box"></div>
+      <div class="box6"></div>
+    </div>
+    <div class="df">
+      <div class="box2"></div>
+      <div class="box7"></div>
+    </div>
+    <div class="df">
+      <div class="box3"></div>
+      <div class="box8"></div>
+    </div>
+    <div class="df">
+      <div class="box4"></div>
+      <div class="box9"></div>
+    </div>
+    <div class="df">
+      <div class="box5"></div>
+      <div class="box10"></div>
+    </div>
+    <script src="../dist/main.js"></script>
+  </body>
 </html>
