chore: add configuration option and new icons
- Add `myConfigurationMode` option to Prettier configuration file
- Add new icons to `public/index.html` file

Signed-off-by: stevecyj <ycsteven.tsao@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -35,5 +35,11 @@
       <div class="box5"></div>
       <div class="box10"></div>
     </div>
+    <div>
+      <span class="iconfont icon-xiaoxi-zhihui"></span>
+      <span class="iconfont icon-xihuan"></span>
+      <span class="iconfont icon-kaitongfuwu"></span>
+      <span class="iconfont icon-fenxiang"></span>
+    </div>
   </body>
 </html>
